--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@excalidraw/excalidraw": "^0.15.3",
+    "@tldraw/tldraw": "^3.15.4",
     "jsesc": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
